@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[69] --> Add Npc Top 10 Arena Teams.
 [68] --> Alternate script Gunship by fiveofeight.
 [67] --> Add Scripts/Trial Of The Champion.
 [66] --> Scripts/Headless Horseman: Cleanup.
